--- a/recovery/root/multidisabler-helper.rc
+++ b/recovery/root/multidisabler-helper.rc
@@ -1,4 +1,4 @@
-on property:sys.boot_completed=1
+on boot
     start multidisabler-helper
 
 service multidisabler-helper /system/bin/multidisabler-helper
