--- a/.github/workflows/make_tarpack.yml
+++ b/.github/workflows/make_tarpack.yml
@@ -41,4 +41,4 @@ jobs:
           tag_name: ${{ github.run_id }}
           body: Download URL; ${{ github.event.inputs.DOWNLOAD_URL }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GTOKEN }}
