a34x: run helper after boot completes

--- a/recovery/root/multidisabler-helper.rc
+++ b/recovery/root/multidisabler-helper.rc
@@ -1,4 +1,4 @@
-on boot
+on property:sys.boot_completed=1
     start multidisabler-helper
 
 service multidisabler-helper /system/bin/multidisabler-helper
