--- a/recovery/root/init.recovery.mt6877.rc
+++ b/recovery/root/init.recovery.mt6877.rc
@@ -3,6 +3,9 @@ import /multidisabler-helper.rc
 on init
     setprop sys.usb.configfs 1
 
+on property:sys.boot_completed=1
+    start detect-var
+
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
     write /sys/class/udc/musb-hdrc/device/cmode 2
@@ -33,3 +36,10 @@ on post-fs
     symlink /dev/block/mapper/pl_b /dev/block/by-name/preloader_raw_b
     symlink /dev/block/mapper/pl_a /dev/block/platform/bootdevice/by-name/preloader_raw_a
     symlink /dev/block/mapper/pl_b /dev/block/platform/bootdevice/by-name/preloader_raw_b
+
+service detect-var /system/bin/detect-var
+    user root
+    group root
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
